--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "dev": "webpack serve --open",
     "build": "webpack",
+    "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/preset-env": "^7.21.5",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.22",
@@ -26,6 +32,8 @@
     "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-middleware": "^6.0.2",
+    "webpack-dev-server": "^4.13.3",
+    "webpack-manifest-plugin": "^5.0.0"
   }
 }
