updated portfolio page

--- a/projects.json
+++ b/projects.json
@@ -5,7 +5,7 @@
       "description": "Certification Project - Dr. Normal Borlaug",
       "technologies": ["HTML", "CSS", "JavaScript"],
       "image": "./assets/images/Dr_NormanBorlaugh_Tribute.jpg",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "This HTML and CSS project is more than just a static information page, its also a learning experience that aims to inspire and educate on the life of Dr. Norman Borlaugh.<br/><br/>  Using the power of HTML & CSS, this certification project aims to create a visually pleasing design and narrative that highlights the life of Dr. Borlaugh, his contributions to agriculture, and his profound impact on the world.",
       "page": "norman_tribute.html",
       "certification": "project-tile__certification",
       "buttons": [
@@ -25,7 +25,7 @@
       "description": "Coffee and Desserts",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/camper-cafe.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "camper-cafe.html",
       "certification": "",
       "buttons": [
@@ -45,7 +45,7 @@
       "description": "Red Green and Blue",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/CSS Color Markers.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "css-color-markers.html",
       "certification": "",
       "buttons": [
@@ -65,7 +65,7 @@
       "description": "Calories, Fat, Protein, Sugar...",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/nutrition label.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "nutrition-label.html",
       "certification": "",
       "buttons": [
@@ -85,7 +85,7 @@
       "description": "3 Musicians Cubism",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/Picasso Painting.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "picasso-painting.html",
       "certification": "",
       "buttons": [
@@ -105,7 +105,7 @@
       "description": "A Form to Register your information",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/Registration Form.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "registration-form.html",
       "certification": "",
       "buttons": [
@@ -125,7 +125,7 @@
       "description": "Accessibility in a Student Quiz",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/Student Quiz.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "student-quiz.html",
       "certification": "",
       "buttons": [
@@ -145,7 +145,7 @@
       "description": "2 and 3 column magazine style layout",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/magazine.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "magazine.html",
       "certification": "",
       "buttons": [
@@ -165,7 +165,7 @@
       "description": "A mobile responsive piano",
       "technologies": ["HTML", "CSS", "JS"],
       "image": "./assets/images/piano.png",
-      "textCopy": "The seventh section provides an overview of the interface for ChatGPT, including options to log out, toggle between dark and light mode, upgrade to a premium version, and start a new chat. The speaker also notes that starting a new chat may be useful if you want to have a totally different conversation or work on.",
+      "textCopy": "**<strong>Work in progress</strong>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non egestas ipsum, id tempor quam. Vivamus nec dui vitae mauris mollis sollicitudin at at eros. Fusce in enim tristique, aliquet ligula a, convallis nisl. Proin fermentum, ex ut viverra pharetra, turpis nisi sollicitudin est, ut dapibus lacus magna vitae ligula. In sit amet magna sit amet odio euismod lacinia at in nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed id congue metus, vitae ullamcorper tortor. Work in progress, aliquet vestibulum nisi quis, volutpat tincidunt tellus.",
       "page": "piano.html",
       "certification": "",
       "buttons": [
