--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,21 +1,21 @@
 {
-  "app.css": "/styles.d78243008c1fadf64c22.css",
-  "app.js": "/app.f0922c5425c6ceb67991.js",
-  "guy_computer_nature.jpg": "/d99d5af2cc088decb98f.jpg",
-  "old-phone.jpg": "/98a7dadd3e7a6c7a3c73.jpg",
-  "computer_code.jpg": "/7277e433e66c9ad4db83.jpg",
-  "whiteboard.jpg": "/3fa54b76387f8cba2da6.jpg",
-  "projects.html": "/projects.html",
-  "index.html": "/index.html",
-  "about.html": "/about.html",
-  "registration-form.html": "/registration-form.html",
-  "nutrition-label.html": "/nutrition-label.html",
-  "picasso-painting.html": "/picasso-painting.html",
-  "student-quiz.html": "/student-quiz.html",
-  "camper-cafe.html": "/camper-cafe.html",
-  "css-color-markers.html": "/css-color-markers.html",
-  "magazine.html": "/magazine.html",
-  "piano.html": "/piano.html",
-  "norman_tribute.html": "/norman_tribute.html",
-  "contact.html": "/contact.html"
+  "app.css": "/PersonalPortfolioProject/styles.3c9f74a6a38bb7fb0ebc.css",
+  "app.js": "/PersonalPortfolioProject/app.f0922c5425c6ceb67991.js",
+  "guy_computer_nature.jpg": "/PersonalPortfolioProject/d99d5af2cc088decb98f.jpg",
+  "old-phone.jpg": "/PersonalPortfolioProject/98a7dadd3e7a6c7a3c73.jpg",
+  "computer_code.jpg": "/PersonalPortfolioProject/7277e433e66c9ad4db83.jpg",
+  "whiteboard.jpg": "/PersonalPortfolioProject/3fa54b76387f8cba2da6.jpg",
+  "projects.html": "/PersonalPortfolioProject/projects.html",
+  "index.html": "/PersonalPortfolioProject/index.html",
+  "about.html": "/PersonalPortfolioProject/about.html",
+  "registration-form.html": "/PersonalPortfolioProject/registration-form.html",
+  "nutrition-label.html": "/PersonalPortfolioProject/nutrition-label.html",
+  "picasso-painting.html": "/PersonalPortfolioProject/picasso-painting.html",
+  "student-quiz.html": "/PersonalPortfolioProject/student-quiz.html",
+  "camper-cafe.html": "/PersonalPortfolioProject/camper-cafe.html",
+  "css-color-markers.html": "/PersonalPortfolioProject/css-color-markers.html",
+  "magazine.html": "/PersonalPortfolioProject/magazine.html",
+  "piano.html": "/PersonalPortfolioProject/piano.html",
+  "norman_tribute.html": "/PersonalPortfolioProject/norman_tribute.html",
+  "contact.html": "/PersonalPortfolioProject/contact.html"
 }
